--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <nav>
         <div class="nav-center">
-            <a class="nav-link" href="">Home</a>
+            <a class="nav-link" href="#">Home</a>
             <a class="nav-link" href="pages/quiz.html">Quiz</a>
-            <a class="nav-link" href="">Support</a>
+            <a class="nav-link" href="pages/calculator.html">Calculator</a>
             <a class="nav-link" href="pages/login.html">Login</a>
         </div>
     </nav>
