--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -11,9 +11,9 @@
 <body>
     <nav>
         <div class="nav-center">
-            <a class="nav-link" href="/">Home</a>
+            <a class="nav-link" href="../index.html">Home</a>
             <a class="nav-link" href="quiz.html">Quiz</a>
-            <a class="nav-link" href="">Support</a>
+            <a class="nav-link" href="calculator.html">Calculator</a>
             <a class="nav-link" href="login.html">Login</a>
         </div>
         <p class="username" id="nav-name"> </p>
@@ -41,19 +41,19 @@
         </div>
         <div class="questions">
             <input class="radio-btn" type="radio" id="ans3" name="Question-2" value="North America">
-            <label class="radio-lbl" for="ans1">North America</label><br>
+            <label class="radio-lbl" for="ans3">North America</label><br>
         </div>
         <div class="questions">
             <input class="radio-btn" type="radio" id="ans4" name="Question-2" value="Europe">
-            <label class="radio-lbl" for="ans2">Europe</label><br>
+            <label class="radio-lbl" for="ans4">Europe</label><br>
         </div>
         <div class="questions">
             <input class="radio-btn" type="radio" id="ans5" name="Question-2" value="Europe">
-            <label class="radio-lbl" for="ans2">Asia</label><br>
+            <label class="radio-lbl" for="ans5">Asia</label><br>
         </div>
         <div class="questions">
             <input class="radio-btn" type="radio" id="ans6" name="Question-2" value="Europe">
-            <label class="radio-lbl" for="ans2">South America</label><br>
+            <label class="radio-lbl" for="ans6">South America</label><br>
         </div>
         <button id="submit-btn" onclick="submit()">Submit</button>
     </div>
