--- a/pages/login.html
+++ b/pages/login.html
@@ -13,7 +13,7 @@
         <div class="nav-center">
             <a class="nav-link" href="/">Home</a>
             <a class="nav-link" href="quiz.html">Quiz</a>
-            <a class="nav-link" href="">Support</a>
+            <a class="nav-link" href="calculator.html">Calculator</a>
             <a class="nav-link" href="login.html">Login</a>
         </div>
         <p class="username" id="nav-name"> </p>
