login password/username incorrect
Error with username/password incorrect msg not going away fixed

--- a/pages/login.html
+++ b/pages/login.html
@@ -26,6 +26,7 @@
         <p id="login"></p>
     </div>
     <script>
+        window.alert("Try the username 'Lucky', and the password 'Password' ")
     </script>
 </body>
 </html>
