--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -12,9 +12,9 @@
     <nav>
         <div class="nav-center">
             <a class="nav-link" href="../index.html">Home</a>
-            <a class="nav-link" href="pages/quiz.html">Quiz</a>
+            <a class="nav-link" href="quiz.html">Quiz</a>
             <a class="nav-link" href="#">Calculator</a>
-            <a class="nav-link" href="pages/login.html">Login</a>
+            <a class="nav-link" href="login.html">Login</a>
         </div>
     </nav>
     <div class="calculator">
